; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_text-lookup.c_lookup_replaceleaf.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_text-lookup.c_lookup_replaceleaf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.text_node = type { %struct.text_leaf* }
%struct.text_leaf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.text_node*, %struct.text_leaf*)* @lookup_replaceleaf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lookup_replaceleaf(%struct.text_node* %0, %struct.text_leaf* %1) #0 {
  %3 = alloca %struct.text_node*, align 8
  %4 = alloca %struct.text_leaf*, align 8
  store %struct.text_node* %0, %struct.text_node** %3, align 8
  store %struct.text_leaf* %1, %struct.text_leaf** %4, align 8
  %5 = load %struct.text_node*, %struct.text_node** %3, align 8
  %6 = getelementptr inbounds %struct.text_node, %struct.text_node* %5, i32 0, i32 0
  %7 = load %struct.text_leaf*, %struct.text_leaf** %6, align 8
  %8 = call i32 @text_leaf_destroy(%struct.text_leaf* %7)
  %9 = load %struct.text_leaf*, %struct.text_leaf** %4, align 8
  %10 = load %struct.text_node*, %struct.text_node** %3, align 8
  %11 = getelementptr inbounds %struct.text_node, %struct.text_node* %10, i32 0, i32 0
  store %struct.text_leaf* %9, %struct.text_leaf** %11, align 8
  ret void
}

declare dso_local i32 @text_leaf_destroy(%struct.text_leaf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
